tests/baselines/reference/parserMemberAccessorDeclaration11(target=es2015).errors.txt
parserMemberAccessorDeclaration11.ts(2,5): error TS1031: 'declare' modifier cannot appear on class elements of this kind.
parserMemberAccessorDeclaration11.ts(2,17): error TS2378: A 'get' accessor must return a value.


==== parserMemberAccessorDeclaration11.ts (2 errors) ====
    class C {
        declare get Foo() { }
        ~~~~~~~
!!! error TS1031: 'declare' modifier cannot appear on class elements of this kind.
                    ~~~
!!! error TS2378: A 'get' accessor must return a value.
    }